@@ -22,6 +22,7 @@ Changes for v2.06
 - Fix bug preventing parallel port support from loading when RMIR opened by double-clicking a .rmir file in Windows (Graham)
 -- Private build 7
 - Fix issue with SimpleSet remotes not being detected on older Linux distributions (unsupported -p flag for older version of lsblk command) (Marcin)
+- Add checksum calculator for binary files (Graham)
 
 Changes for v2.05
 -- Private build 1
